# pomodoro

./: .gitignore  Cargo.toml  README.md
src/: config.rs  event.rs  main.rs  notification.rs
