[package]
name = "pomodoro"
version = "0.1.0"
authors = ["YujinGaya <yujin.gaya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
console = "0.9"
indicatif = "0.14"
dialoguer = "0.5"
mac-notification-sys = "0.3"
