[package]
name = "pomodoro"
version = "0.1.1"
authors = ["YujinGaya <yujin.gaya@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3"
console = "0.9"
indicatif = "0.14"
dialoguer = "0.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
dirs = "2.0"

[target.'cfg(target_os="macos")'.dependencies]
mac-notification-sys = "0.3"
